# handpose-rs

./: .gitignore  .gitmodules  Cargo.toml
model/: convert_to_ort.sh  download_onnx_models.sh  hand_landmark_sparse_Nx3x224x224.required_operators.config  palm_detection_full_inf_post_192x192.required_operators.config
src/: calculate.rs  helpers.rs  lib.rs  main.rs  visualize.rs
tests/: hand_landmarks.json  mediapipe_handpose.ipynb
