[package]
name = "handpose_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
imageproc = "0.23.0"
macroquad = "0.4.5"
ndarray = "0.15.6"
ort = "^2.0.0-alpha.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tiny-skia = "0.11.4"
# show-image = "0.13.1"
