[package]
name = "handpose_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
imageproc = "0.23.0"
macroquad = "0.4.5"
ndarray = "0.15.6"
ort = { git = "https://github.com/pykeio/ort.git", branch = "wasm32-unknown-unknown" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tiny-skia = "0.11.4"
wasm-bindgen = "0.2.92"
# show-image = "0.13.1"
